# I8080Emulator

./: CMakeLists.txt  imgui.ini  main.cpp  test.hex
src/: Application.cpp  Application.h  BUS.cpp  BUS.h  CPU.cpp  CPU.h  Error.cpp  Error.h  HexBin.cpp  HexBin.h  Logger.cpp  Logger.h  MEM.cpp  MEM.h  MemoryViewer.cpp  MemoryViewer.h  Opcodes.cpp  Opcodes.h  Simulation.cpp  Simulation.h  Timer.cpp  Timer.h  Util.cpp  Util.h
src/Platformwin/: PlatformWin32.cpp  PlatformWin32.h
src/dx11/: dx11.cpp  dx11.h
src/imgooey/: imgooey.cpp  imgooey.h
